<resources>
    <string name="app_name">Radiotheque</string>
    <string name="title_activity_splash">Willkommen zu Radiotheque</string>
    <string name="search_label">Suche</string>
    <string name="search_hint">Stationen suchen&#8230;</string>
    <string name="appstock_update_title">Für Ihre akutelle AppStock 
		Version liegt ein Update vor.
		Jetzt auf die neuste Version
		updaten?
        </string>
    <string name="appstock_update_cancel">Später erinnern</string>
    <string name="appstock_update_update">Aktualisieren</string>
    <string name="radiothek.bundle.next.update.time">next_update_time</string>
    <string name="actionbar_not_playing_alert_text">There is not station playing!</string>
    <string name="actionbar_not_playing_alert_dialog_ok">OK</string>
    <string name="searchview_text">Bitte nutzen Sie für diese Funktion den Touchscreen.</string>
    <string name="searchview_checkbox">Dialog immer anzeigen</string>
    <string name="searchview_button_text">OK</string>
    <string name="searchview_checkbox_key">immer</string>
    <string name="general_dialog_text">Die Radiostation ist aktuell nicht verfügbar.</string>
    <string-array name="nav_drawer_items">
        <item>@string/mainactivity.button.start</item>
        <item>@string/mainactivity.button.history</item>
        <item>@string/mainactivity.button.about</item>
        <item>@string/mainactivity.button.reportproblem</item>
        <item>@string/mainactivity.button.share</item>
        <item>@string/mainactivity.button.imprint</item>
        <item>@string/mainactivity.button.setting</item>
        <item>@string/mainactivity.button.datenschutz</item>
        <item>@string/mainactivity.button.buy</item>
        <item>@string/mainactivity.button.mute</item>
    </string-array>
    <string name="setting_style_title">App Erscheinungsbild</string>
    <string name="setting_style_green">Original</string>
    <string name="setting_style_orange">Invertiert</string>
    <string name="setting_sort_title">Senderlistensortierung</string>
    <string name="setting_sort_up">Aufsteigend</string>
    <string name="setting_sort_down">Absteigend</string>
    <string name="setting_size_title">Senderlistenansicht</string>
    <string name="setting_size_on">Groß</string>
    <string name="setting_size_off">Klein</string>
    <string name="setting_size_big">Sendereintrag Groß darstellen</string>
    <string name="setting_size_small">Sendereintrag klein darstellen</string>
    <string name="preference_button">Änderungen übernehmen</string>
    <string-array name="pref_item_size_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_invert_color_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="pref_sort_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="share.text.1">Die besten Songs aus aller Welt - ich liebe mein Internetradio aus der Radiotheque!</string>
    <string name="share.text.2">Die Radiotheque ist die App für richtig cooles Internetradio mit der besten Musik aus der ganzen Welt!</string>
    <string name="share.text.3">Die Radiotheque rockt! Das ist meine App für das beste Internetradio aus der ganzen Welt!</string>
    <string name="share.text.4">Laut und sexy - mit der Radiotheque-App höre ich jetzt gerade meine Lieblingsmusik.</string>
    <string name="share.text.5">Die Musik-Entdecker-App - mit der Radiotheque höre ich ständig neue Songs aus der ganzen Welt!</string>
    <string name="aboutactivity.text.about"><![CDATA[Die beste Musik aus der ganzen Welt in einer einzigen App. Die Radiotheque von TechniSat vereint mehr als 6.000 Internetradio-Sender kompakt und übersichtlich mit einer perfekt bedienbaren und modern gestalteten Benutzeroberfläche auf Android Tablets und Smartphones. Dabei lassen sich die Radiostationen schnell und bequem nach Genres wie z. B. Schlager, Soul oder Elektro sowie Herkunftsland durchstöbern und sortieren. Lieblingsradiosender werden ganz einfach in die Favoritenliste geladen und sind dort jederzeit abrufbar. Sie haben sich in einen soeben gehörten Song verliebt? Dann kaufen Sie den Titel doch gleich online oder teilen Sie die Glücksgefühle mit Ihren Freunden auf Facebook oder anderen sozialen Netzwerken. So erweist sich die Radiotheque als ultimativer und vor allem einfach bedienbarer Zugang zur besten Musik aus der ganzen Welt. ]]></string>
    <string name="genreactivity.text.nostationavailable">Derzeit ist keine Station für dieses Genre verfügbar.</string>
    <string name="impressumactivity.caption.imprint">Impressum</string>
    <string name="impressumactivity.text.imprint">
<![CDATA[
		Anbieter, Kontakt u. Hinweise \n
        Anbieter \n
        TechniSat Digital GmbH \n
        Julius-Saxler-Straße 3 \n
        TechniPark \n
        D-54550 Daun / Germany \n
        Geschäftsführung: Peter Lepper, Stefan Kön \n
        Register und Registernummer: Amtsgericht Wittlich HRB 11561 \n
        Umsatzsteuer-Identifikationsnummer: DE 149 932 421 \n
        Kontakt \n
        Telefon +49 - (0)6592 / 712-600 \n
        Telefax +49 - (0)6592 / 4910 \n
        Service & Support +49 - (0)3925 / 9220-1800 \n
        info@technisat.de \n
        www.technisat.de \n \n
        Rechtliche Hinweise\n
        TechniSat Digital GmbH - Alle Rechte vorbehalten. Alle Angaben ohne Gewähr. \n
        Text, Bilder, Grafiken, Sound, Animationen und Videos sowie deren Anordnung auf www.technisat.de
        unterliegen dem Schutz des Urheberrechts und anderer Schutzgesetze.
        Jede unauthorisierte Nutzung der Marke TechniSat oder von TechniSat geschützter Warenzeichen, insbesondere die
        Vermarktung von Piraterieprodukten oder die Bewerbung solcher Produkte in Verbindung mit der Marke TechniSat, wird gerichtlich verfolgt.
        Verlinkungen auf den Inhalt dieser Seiten sind nur gestattet, wenn diese vollständig, ohne Werbeframes der linkenden
        Seite dargestellt werden. Cross-Linking (Verlinkung auf einzelne Grafiken) zur Ausnutzung des Transfervolumens
        von www.technisat.de ist nicht gestattet. Verstöße gegen das Copyright werden durch TechniSat gerichtlich verfolgt. \n \n
        Besonderer Hinweis \n
        Mit Urteil vom 12. Mai 1998 hat das Landgericht Hamburg entschieden, dass man durch die Anbringung eines Links
        die Inhalte der verlinkten Seite ggf. mit zu verantworten hat. Dies kann, so das LG, nur dadurch verhindert werden,
        indem man sich ausdrücklich von diesen Inhalten distanziert. Wir haben auf
        unseren Seiten Verweise (Links) zu anderen Seiten im Internet gelegt. Für alle diese Links gilt: TechniSat Digital
        GmbH erklärt ausdrücklich, dass wir keinerlei Einfluss auf die Gestaltung und die Inhalte der verlinkten Seiten haben.
        Deshalb distanzieren wir uns hiermit ausdrücklich von allen
        Inhalten aller verlinkten Seiten auf www.technisat.de und machen uns diese Inhalte nicht zu Eigen. Diese Erklärung
        gilt für alle auf unserer Internetpräsenz angezeigten Links und für alle Inhalte der Seiten, zu denen die bei uns angemeldeten Banner und Links führen. \n \n
        Haftungsausschluss \n
        Die bereitgestellten Informationen auf dieser Webseite wurden sorgfältig geprüft und werden regelmäßig aktualisiert. Jedoch kann keine
        Haftung oder Garantie dafür übernommen werden, dass alle Angaben zu jeder Zeit vollständig,
        richtig und in letzter Aktualität dargestellt sind. Dies gilt insbesondere für alle Links zu anderen Websites,
        auf die direkt oder indirekt verwiesen wird. Alle Angaben können ohne vorherige Ankündigung geändert, entfernt oder ergänzt werden. ]]>
    </string>
    <string name="impressumactivity.text.imprint_new">
<![CDATA[Anbieter, Kontakt u. Hinweise \n
        Anbieter \t\t\t\t\t\t Kontakt  \n
        \t  TechniSat Digital GmbH \t\t\t\t Telefon\t\t\t\t\t +49 - (0)6592 / 712-600\n
        Julius-Saxler-Straße 3 \t\t\t\t Telefax\t\t\t\t\t +49 - (0)6592 / 4910 \n
        \t\t   TechniPark \t\t\t\t\t\t\t\t Service & Support\t\t   +49 - (0)3925 / 9220-1800\nD-54550 Daun / Germany \t\t\t\t\t\t\t info@technisat.de \n
        \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t www.technisat.de \n \n
        Geschäftsführung:\n
        Peter Lepper, Stefan Kön, Peter Kohlschmidt, Beatrix Simon-Ludwig \n\n
        Register und Registernummer: Amtsgericht Wittlich HRB 11561 \n
        Umsatzsteuer-Identifikationsnummer: DE 149 932 421 \n\n\n
        
        Rechtliche Hinweise\n
        TechniSat Digital GmbH - Alle Rechte vorbehalten. Alle Angaben ohne Gewähr. \n
        Text, Bilder, Grafiken, Sound, Animationen und Videos sowie deren Anordnung auf www.technisat.de
        unterliegen dem Schutz des Urheberrechts und anderer Schutzgesetze.
        Jede unauthorisierte Nutzung der Marke TechniSat oder von TechniSat geschützter Warenzeichen, insbesondere die
        Vermarktung von Piraterieprodukten oder die Bewerbung solcher Produkte in Verbindung mit der Marke TechniSat, wird gerichtlich verfolgt.
        Verlinkungen auf den Inhalt dieser Seiten sind nur gestattet, wenn diese vollständig, ohne Werbeframes der linkenden
        Seite dargestellt werden. Cross-Linking (Verlinkung auf einzelne Grafiken) zur Ausnutzung des Transfervolumens
        von www.technisat.de ist nicht gestattet. Verstöße gegen das Copyright werden durch TechniSat gerichtlich verfolgt. \n \n
        Besonderer Hinweis \n
        Mit Urteil vom 12. Mai 1998 hat das Landgericht Hamburg entschieden, dass man durch die Anbringung eines Links
        die Inhalte der verlinkten Seite ggf. mit zu verantworten hat. Dies kann, so das LG, nur dadurch verhindert werden,
        indem man sich ausdrücklich von diesen Inhalten distanziert. Wir haben auf
        unseren Seiten Verweise (Links) zu anderen Seiten im Internet gelegt. Für alle diese Links gilt: TechniSat Digital
        GmbH erklärt ausdrücklich, dass wir keinerlei Einfluss auf die Gestaltung und die Inhalte der verlinkten Seiten haben.
        Deshalb distanzieren wir uns hiermit ausdrücklich von allen
        Inhalten aller verlinkten Seiten auf www.technisat.de und machen uns diese Inhalte nicht zu Eigen. Diese Erklärung
        gilt für alle auf unserer Internetpräsenz angezeigten Links und für alle Inhalte der Seiten, zu denen die bei uns angemeldeten Banner und Links führen. \n \n
        Haftungsausschluss \n
        Die bereitgestellten Informationen auf dieser Webseite wurden sorgfältig geprüft und werden regelmäßig aktualisiert. Jedoch kann keine
        Haftung oder Garantie dafür übernommen werden, dass alle Angaben zu jeder Zeit vollständig,
        richtig und in letzter Aktualität dargestellt sind. Dies gilt insbesondere für alle Links zu anderen Websites,
        auf die direkt oder indirekt verwiesen wird. Alle Angaben können ohne vorherige Ankündigung geändert, entfernt oder ergänzt werden. ]]>
    </string>
    <string name="datenschuttactivity.title">Datenschutz</string>
    <string name="datenschutzactivity.content">In Bearbeitung: Datenschutzhinweis angefordert</string>
    <string name="mainactivity.button.history">Gehört</string>
    <string name="mainactivity.button.genre">Genre</string>
    <string name="mainactivity.button.country">Länder</string>
    <string name="mainactivity.button.favs">Favoriten</string>
    <string name="mainactivity.button.Teilen">Weitersagen</string>
    <string name="mainactivity.button.about">Über uns</string>
    <string name="mainactivity.button.start">Start</string>
    <string name="mainactivity.button.reportproblem">Problem melden</string>
    <string name="mainactivity.button.imprint">Impressum</string>
    <string name="mainactivity.button.setting">Einstellungen</string>
    <string name="mainactivity.button.datenschutz">Datenschutz</string>
    <string name="mainactivity.button.close">Schließen</string>
</resources>